deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops
  labels:
    app: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops
  template:
    metadata:
      labels:
        app: devsecops
    spec:
      containers:
        - name: devsecops
          image: ${REPOSITORY}:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 4040
