service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops
spec:
  selector:
    app: devsecops
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4040
  type: LoadBalancer
